# 14533

./: README.md
drug/: BUILD.gn  dao.c
drug/include/: iot_log.h  iot_main.h  iot_profile.h  yuanyi_aht20.h  yuanyi_light.h  yuanyi_mq2.h  yuanyi_servo.h
drug/src/: iot_main.c  iot_profile.c  wifi_connect.c  yuanyi_aht20.c  yuanyi_light.c  yuanyi_mq2.c  yuanyi_servo.c
hand_classify/: hand_classify.c  yolov2_hand_detect.c
